@@ -1,4 +1,4 @@
-.TH "BST ARTIFACT LOG" "1" "27-Jun-2019" "" "bst artifact log Manual"
+.TH "BST ARTIFACT LOG" "1" "01-Jul-2019" "" "bst artifact log Manual"
 .SH NAME
 bst\-artifact\-log \- Show logs of artifacts
 .SH SYNOPSIS
