@@ -1,4 +1,4 @@
-.TH "BST ARTIFACT" "1" "27-Jun-2019" "" "bst artifact Manual"
+.TH "BST ARTIFACT" "1" "01-Jul-2019" "" "bst artifact Manual"
 .SH NAME
 bst\-artifact \- Manipulate cached artifacts
 .SH SYNOPSIS
@@ -8,10 +8,6 @@ bst\-artifact \- Manipulate cached artifacts
 Manipulate cached artifacts
 .SH COMMANDS
 .PP
-\fBcheckout\fP
-  Checkout contents of an artifact
-  See \fBbst artifact-checkout(1)\fP for full documentation on the \fBcheckout\fP command.
-.PP
 \fBpull\fP
   Pull a built artifact
   See \fBbst artifact-pull(1)\fP for full documentation on the \fBpull\fP command.
@@ -20,10 +16,14 @@ Manipulate cached artifacts
   Push a built artifact
   See \fBbst artifact-push(1)\fP for full documentation on the \fBpush\fP command.
 .PP
+\fBdelete\fP
+  Remove artifacts from the local cache
+  See \fBbst artifact-delete(1)\fP for full documentation on the \fBdelete\fP command.
+.PP
 \fBlog\fP
   Show logs of artifacts
   See \fBbst artifact-log(1)\fP for full documentation on the \fBlog\fP command.
 .PP
-\fBdelete\fP
-  Remove artifacts from the local cache
-  See \fBbst artifact-delete(1)\fP for full documentation on the \fBdelete\fP command.
+\fBcheckout\fP
+  Checkout contents of an artifact
+  See \fBbst artifact-checkout(1)\fP for full documentation on the \fBcheckout\fP command.
