@@ -1,4 +1,4 @@
-.TH "BST BUILD" "1" "27-Jun-2019" "" "bst build Manual"
+.TH "BST BUILD" "1" "01-Jul-2019" "" "bst build Manual"
 .SH NAME
 bst\-build \- Build elements in a pipeline
 .SH SYNOPSIS
