@@ -1,4 +1,4 @@
-.TH "BST HELP" "1" "27-Jun-2019" "" "bst help Manual"
+.TH "BST HELP" "1" "01-Jul-2019" "" "bst help Manual"
 .SH NAME
 bst\-help \- Print usage information
 .SH SYNOPSIS
