@@ -1,9 +1,9 @@
-.TH "BST INIT" "1" "27-Jun-2019" "" "bst init Manual"
+.TH "BST INIT" "1" "01-Jul-2019" "" "bst init Manual"
 .SH NAME
 bst\-init \- Initialize a new BuildStream project
 .SH SYNOPSIS
 .B bst init
-[OPTIONS]
+[OPTIONS] [TARGET_DIRECTORY]
 .SH DESCRIPTION
 Initialize a new BuildStream project
 .PP
