@@ -1,4 +1,4 @@
-.TH "BST SHELL" "1" "27-Jun-2019" "" "bst shell Manual"
+.TH "BST SHELL" "1" "01-Jul-2019" "" "bst shell Manual"
 .SH NAME
 bst\-shell \- Shell into an element's sandbox environment
 .SH SYNOPSIS
