@@ -1,4 +1,4 @@
-.TH "BST SHOW" "1" "27-Jun-2019" "" "bst show Manual"
+.TH "BST SHOW" "1" "01-Jul-2019" "" "bst show Manual"
 .SH NAME
 bst\-show \- Show elements in the pipeline
 .SH SYNOPSIS
