@@ -1,4 +1,4 @@
-.TH "BST SOURCE FETCH" "1" "27-Jun-2019" "" "bst source fetch Manual"
+.TH "BST SOURCE FETCH" "1" "01-Jul-2019" "" "bst source fetch Manual"
 .SH NAME
 bst\-source\-fetch \- Fetch sources in a pipeline
 .SH SYNOPSIS
