@@ -1,4 +1,4 @@
-.TH "BST SOURCE TRACK" "1" "27-Jun-2019" "" "bst source track Manual"
+.TH "BST SOURCE TRACK" "1" "01-Jul-2019" "" "bst source track Manual"
 .SH NAME
 bst\-source\-track \- Track new source references
 .SH SYNOPSIS
