@@ -1,4 +1,4 @@
-.TH "BST SOURCE" "1" "27-Jun-2019" "" "bst source Manual"
+.TH "BST SOURCE" "1" "01-Jul-2019" "" "bst source Manual"
 .SH NAME
 bst\-source \- Manipulate sources for an element
 .SH SYNOPSIS
@@ -8,10 +8,6 @@ bst\-source \- Manipulate sources for an element
 Manipulate sources for an element
 .SH COMMANDS
 .PP
-\fBfetch\fP
-  Fetch sources in a pipeline
-  See \fBbst source-fetch(1)\fP for full documentation on the \fBfetch\fP command.
-.PP
 \fBtrack\fP
   Track new source references
   See \fBbst source-track(1)\fP for full documentation on the \fBtrack\fP command.
@@ -19,3 +15,7 @@ Manipulate sources for an element
 \fBcheckout\fP
   Checkout sources for an element
   See \fBbst source-checkout(1)\fP for full documentation on the \fBcheckout\fP command.
+.PP
+\fBfetch\fP
+  Fetch sources in a pipeline
+  See \fBbst source-fetch(1)\fP for full documentation on the \fBfetch\fP command.
