@@ -1,4 +1,4 @@
-.TH "BST WORKSPACE LIST" "1" "27-Jun-2019" "" "bst workspace list Manual"
+.TH "BST WORKSPACE LIST" "1" "01-Jul-2019" "" "bst workspace list Manual"
 .SH NAME
 bst\-workspace\-list \- List open workspaces
 .SH SYNOPSIS
