@@ -1,4 +1,4 @@
-.TH "BST WORKSPACE" "1" "27-Jun-2019" "" "bst workspace Manual"
+.TH "BST WORKSPACE" "1" "01-Jul-2019" "" "bst workspace Manual"
 .SH NAME
 bst\-workspace \- Manipulate developer workspaces
 .SH SYNOPSIS
@@ -8,18 +8,18 @@ bst\-workspace \- Manipulate developer workspaces
 Manipulate developer workspaces
 .SH COMMANDS
 .PP
-\fBopen\fP
-  Open a new workspace
-  See \fBbst workspace-open(1)\fP for full documentation on the \fBopen\fP command.
-.PP
 \fBclose\fP
   Close workspaces
   See \fBbst workspace-close(1)\fP for full documentation on the \fBclose\fP command.
+.PP
+\fBlist\fP
+  List open workspaces
+  See \fBbst workspace-list(1)\fP for full documentation on the \fBlist\fP command.
 .PP
 \fBreset\fP
   Reset a workspace to its original state
   See \fBbst workspace-reset(1)\fP for full documentation on the \fBreset\fP command.
 .PP
-\fBlist\fP
-  List open workspaces
-  See \fBbst workspace-list(1)\fP for full documentation on the \fBlist\fP command.
+\fBopen\fP
+  Open a new workspace
+  See \fBbst workspace-open(1)\fP for full documentation on the \fBopen\fP command.
