@@ -1,4 +1,4 @@
-.TH "BST" "1" "27-Jun-2019" "" "bst Manual"
+.TH "BST" "1" "01-Jul-2019" "" "bst Manual"
 .SH NAME
 bst \- Build and manipulate BuildStream projects...
 .SH SYNOPSIS
@@ -72,33 +72,37 @@ Include an element's build tree when pulling remote element artifacts
 Cache artifact build tree content on creation
 .SH COMMANDS
 .PP
-\fBhelp\fP
-  Print usage information
-  See \fBbst-help(1)\fP for full documentation on the \fBhelp\fP command.
+\fBworkspace\fP
+  Manipulate developer workspaces
+  See \fBbst-workspace(1)\fP for full documentation on the \fBworkspace\fP command.
 .PP
-\fBinit\fP
-  Initialize a new BuildStream project
-  See \fBbst-init(1)\fP for full documentation on the \fBinit\fP command.
-.PP
-\fBbuild\fP
-  Build elements in a pipeline
-  See \fBbst-build(1)\fP for full documentation on the \fBbuild\fP command.
+\fBpull\fP
+  COMMAND OBSOLETE - Pull a built artifact
+  See \fBbst-pull(1)\fP for full documentation on the \fBpull\fP command.
 .PP
 \fBshow\fP
   Show elements in the pipeline
   See \fBbst-show(1)\fP for full documentation on the \fBshow\fP command.
 .PP
-\fBshell\fP
-  Shell into an element's sandbox environment
-  See \fBbst-shell(1)\fP for full documentation on the \fBshell\fP command.
+\fBtrack\fP
+  COMMAND OBSOLETE - Track new source references
+  See \fBbst-track(1)\fP for full documentation on the \fBtrack\fP command.
 .PP
 \fBsource\fP
   Manipulate sources for an element
   See \fBbst-source(1)\fP for full documentation on the \fBsource\fP command.
 .PP
-\fBworkspace\fP
-  Manipulate developer workspaces
-  See \fBbst-workspace(1)\fP for full documentation on the \fBworkspace\fP command.
+\fBpush\fP
+  COMMAND OBSOLETE - Push a built artifact
+  See \fBbst-push(1)\fP for full documentation on the \fBpush\fP command.
+.PP
+\fBbuild\fP
+  Build elements in a pipeline
+  See \fBbst-build(1)\fP for full documentation on the \fBbuild\fP command.
+.PP
+\fBhelp\fP
+  Print usage information
+  See \fBbst-help(1)\fP for full documentation on the \fBhelp\fP command.
 .PP
 \fBartifact\fP
   Manipulate cached artifacts
@@ -108,18 +112,14 @@ Cache artifact build tree content on creation
   COMMAND OBSOLETE - Fetch sources in a pipeline
   See \fBbst-fetch(1)\fP for full documentation on the \fBfetch\fP command.
 .PP
-\fBtrack\fP
-  COMMAND OBSOLETE - Track new source references
-  See \fBbst-track(1)\fP for full documentation on the \fBtrack\fP command.
+\fBshell\fP
+  Shell into an element's sandbox environment
+  See \fBbst-shell(1)\fP for full documentation on the \fBshell\fP command.
+.PP
+\fBinit\fP
+  Initialize a new BuildStream project
+  See \fBbst-init(1)\fP for full documentation on the \fBinit\fP command.
 .PP
 \fBcheckout\fP
   COMMAND OBSOLETE - Checkout a built artifact
   See \fBbst-checkout(1)\fP for full documentation on the \fBcheckout\fP command.
-.PP
-\fBpull\fP
-  COMMAND OBSOLETE - Pull a built artifact
-  See \fBbst-pull(1)\fP for full documentation on the \fBpull\fP command.
-.PP
-\fBpush\fP
-  COMMAND OBSOLETE - Push a built artifact
-  See \fBbst-push(1)\fP for full documentation on the \fBpush\fP command.
