@@ -15,7 +15,7 @@ def test_defaults(cli, tmpdir):
     project = str(tmpdir)
     project_path = os.path.join(project, 'project.conf')
 
-    result = cli.run(project=project, args=['init', '--project-name', 'foo'])
+    result = cli.run(args=['init', '--project-name', 'foo', project])
     result.assert_success()
 
     project_conf = _yaml.load(project_path)
@@ -28,11 +28,12 @@ def test_all_options(cli, tmpdir):
     project = str(tmpdir)
     project_path = os.path.join(project, 'project.conf')
 
-    result = cli.run(project=project, args=[
+    result = cli.run(args=[
         'init',
         '--project-name', 'foo',
         '--format-version', '2',
         '--element-path', 'ponies',
+        project
     ])
     result.assert_success()
 
@@ -46,7 +47,7 @@ def test_all_options(cli, tmpdir):
 
 
 def test_no_project_name(cli, tmpdir):
-    result = cli.run(project=str(tmpdir), args=['init'])
+    result = cli.run(args=['init', str(tmpdir)])
     result.assert_main_error(ErrorDomain.APP, 'unspecified-project-name')
 
 
@@ -56,7 +57,7 @@ def test_project_exists(cli, tmpdir):
     with open(project_path, 'w') as f:
         f.write('name: pony\n')
 
-    result = cli.run(project=project, args=['init', '--project-name', 'foo'])
+    result = cli.run(args=['init', '--project-name', 'foo', project])
     result.assert_main_error(ErrorDomain.APP, 'project-exists')
 
 
@@ -66,7 +67,7 @@ def test_force_overwrite_project(cli, tmpdir):
     with open(project_path, 'w') as f:
         f.write('name: pony\n')
 
-    result = cli.run(project=project, args=['init', '--project-name', 'foo', '--force'])
+    result = cli.run(args=['init', '--project-name', 'foo', '--force', project])
     result.assert_success()
 
     project_conf = _yaml.load(project_path)
@@ -74,24 +75,44 @@ def test_force_overwrite_project(cli, tmpdir):
     assert _yaml.node_get(project_conf, str, 'format-version') == str(BST_FORMAT_VERSION)
 
 
+def test_relative_path_directory_as_argument(cli, tmpdir):
+    project = os.path.join(str(tmpdir), 'child-directory')
+    os.makedirs(project, exist_ok=True)
+    project_path = os.path.join(project, 'project.conf')
+    rel_path = os.path.relpath(project)
+
+    result = cli.run(args=['init', '--project-name', 'foo', rel_path])
+    result.assert_success()
+
+    project_conf = _yaml.load(project_path)
+    assert _yaml.node_get(project_conf, str, 'name') == 'foo'
+    assert _yaml.node_get(project_conf, str, 'format-version') == str(BST_FORMAT_VERSION)
+    assert _yaml.node_get(project_conf, str, 'element-path') == 'elements'
+
+
+def test_set_directory_and_directory_as_argument(cli, tmpdir):
+    result = cli.run(args=['-C', '/foo/bar', 'init', '--project-name', 'foo', '/boo/far'])
+    result.assert_main_error(ErrorDomain.APP, 'init-with-set-directory')
+
+
 @pytest.mark.parametrize("project_name", [('Micheal Jackson'), ('one+one')])
 def test_bad_project_name(cli, tmpdir, project_name):
-    result = cli.run(project=str(tmpdir), args=['init', '--project-name', project_name])
+    result = cli.run(args=['init', '--project-name', str(tmpdir)])
     result.assert_main_error(ErrorDomain.LOAD, LoadErrorReason.INVALID_SYMBOL_NAME)
 
 
 @pytest.mark.parametrize("format_version", [(str(-1)), (str(BST_FORMAT_VERSION + 1))])
 def test_bad_format_version(cli, tmpdir, format_version):
-    result = cli.run(project=str(tmpdir), args=[
-        'init', '--project-name', 'foo', '--format-version', format_version
+    result = cli.run(args=[
+        'init', '--project-name', 'foo', '--format-version', format_version, str(tmpdir)
     ])
     result.assert_main_error(ErrorDomain.APP, 'invalid-format-version')
 
 
 @pytest.mark.parametrize("element_path", [('/absolute/path'), ('../outside/of/project')])
 def test_bad_element_path(cli, tmpdir, element_path):
-    result = cli.run(project=str(tmpdir), args=[
-        'init', '--project-name', 'foo', '--element-path', element_path
+    result = cli.run(args=[
+        'init', '--project-name', 'foo', '--element-path', element_path, str(tmpdir)
     ])
     result.assert_main_error(ErrorDomain.APP, 'invalid-element-path')
 
@@ -115,7 +136,7 @@ def test_element_path_interactive(cli, tmp_path, monkeypatch, element_path):
 
     monkeypatch.setattr(App, 'create', DummyInteractiveApp.create)
 
-    result = cli.run(project=str(project), args=['init'])
+    result = cli.run(args=['init', str(project)])
     result.assert_success()
 
     full_element_path = project.joinpath(element_path)
