@@ -2,6 +2,9 @@
 buildstream 1.3.1
 =================
 
+  o BREAKING CHANGE: `bst init` no longer uses the `--directory` or `-C`
+    option. Instead, it (optionally) takes a directory as an argument.
+
   o BREAKING CHANGE: `Plugin.node_items` doesn't accept 'dict' values anymore.
     Please used `Node`s instead.
 
